# dotfiles

./: README.md  flake.nix  home.nix  pre-commit.nix  shell.nix
.github/workflows/: check.yaml  update.yaml
apps/: hello.nix  switch-home.nix  switch-system.nix
home-manager/: git.nix  home.nix  vim.nix  vscode.nix
homes/: common.nix  default.nix
homes/john/: default.nix  home.nix
homes/john.pertoft/: default.nix  home.nix  llm.nix
hosts/darwin/work-laptop/: configuration.nix
hosts/nixos/: common.nix
hosts/nixos/desktop/: configuration.nix  hardware-configuration.nix
hosts/nixos/home-desktop/: configuration-smol.nix  configuration.nix  default.nix  hardware-configuration.nix
hosts/nixos/pi/: hardware-configuration.nix
hosts/nixos/work-desktop/: configuration.nix  default.nix  hardware-configuration.nix
modules/: configuration.nix
modules/home-manager/: default.nix  discover.nix
modules/home-manager/aarch64-darwin/: default.nix
modules/home-manager/aarch64-linux/: default.nix
modules/home-manager/cloud/: default.nix
modules/home-manager/containers/: default.nix
modules/home-manager/cursor/: default.nix
modules/home-manager/data/: default.nix
modules/nix-darwin/: configuration.nix  default.nix
modules/nixos/: configuration.nix  cuda.nix  default.nix  desktop.nix  gaming.nix  server.nix  vpn.nix
overlays/: nixpkgs-unstable.nix
systems/STOLTM7XVQCG7/: configuration.nix  default.nix
systems/home-desktop/: configuration.nix  default.nix  hardware-configuration.nix
systems/pi/: README.md  configuration.nix  default.nix  hardware-configuration.nix  install.sh  john.pertoft.pub  services.nix
templates/: default.nix
templates/python-ml-uv/: .gitignore  README.md  flake.nix  pyproject.toml
templates/python-ml-uv2nix/: .gitignore  README.md  flake.nix  pyproject.toml
templates/python-ml-uv2nix/src/app/: __init__.py
templates/rust/: README.md  flake.nix  rust-toolchain.toml
(+66 files in other folders)
