[project]
name = "app"
version = "0.1.0"
description = "Python ML project (uv + PyPI wheels)"
requires-python = ">=3.12"
dependencies = [
  "numpy",
  "torch",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ---------------------------------------------------------------------------
# CUDA vs CPU torch selection.
#
# Default below pulls CUDA-enabled torch wheels (which bundle their own CUDA
# runtime). For CPU-only (e.g. on darwin or a machine without an NVIDIA GPU),
# switch the index url to the cpu channel, e.g.
#   url = "https://download.pytorch.org/whl/cpu"
# and remove/adjust the marker.
# ---------------------------------------------------------------------------
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]
